--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,7 @@ ext {
     androidArchLibVersion = '1.1.1'
     butterKnife = "8.8.1"
     exoplayerVersion = '2.9.6'
+    gsonVersion = '2.8.5'
 }
 
 dependencies {
@@ -35,15 +36,20 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation "com.android.support:recyclerview-v7:${supportLibVersion}"
     implementation "com.android.support:design:${supportLibVersion}"
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.squareup.picasso:picasso:2.5.2'
     implementation 'com.google.code.gson:gson:2.8.5'
     implementation "android.arch.lifecycle:extensions:${androidArchLibVersion}"
     annotationProcessor "android.arch.lifecycle:compiler:${androidArchLibVersion}"
     implementation "com.jakewharton:butterknife:${butterKnife}"
     annotationProcessor "com.jakewharton:butterknife-compiler:${butterKnife}"
+    implementation "com.google.code.gson:gson:${gsonVersion}"
+    androidTestImplementation 'com.android.support.test:rules:1.0.2'
+
+    androidTestImplementation  'com.android.support.test.espresso:espresso-contrib:3.0.2'
+    testImplementation 'junit:junit:4.12'
+    androidTestImplementation 'com.android.support.test:runner:1.0.2'
+    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    implementation 'com.android.support.test.espresso:espresso-idling-resource:3.0.2'
 
     //ExoPlayer
     implementation "com.google.android.exoplayer:exoplayer:$exoplayerVersion"
