--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,16 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
+        <receiver android:name=".modules.widget.RecipeWidget">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/recipe_widget_info" />
+        </receiver>
+
         <activity android:name=".modules.main.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -20,10 +30,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".modules.recipe_view.recipe.RecipeFragment" />
-        <activity android:name=".modules.recipe_view.preparing.PrepareFragment" />
-        <activity android:name=".modules.recipe_view.RecipeViewAcivity"></activity>
-        <activity android:name=".modules.recipe_view.preparing.PrepareActivity" />
+        <activity android:name=".modules.recipe_view.RecipeViewAcivity"
+            android:configChanges="orientation|screenSize|layoutDirection"/>
+        <activity android:name=".modules.recipe_view.preparing.PrepareActivity"
+            android:configChanges="orientation|screenSize|layoutDirection"/>
+
+        <service android:name=".modules.widget.RecipeIntentService" />
     </application>
 
 </manifest>
